archiveOccupancyRecord() tests complete. Added additional user checkIn tests. Added OccupancyController mappings. Added scheduled archiving with main SpacefinderApplication file